--- a/stretch-assignment/digital_timer/index.html
+++ b/stretch-assignment/digital_timer/index.html
@@ -13,5 +13,6 @@
       <div class="digit" id="msHundreds">-</div>
       <div class="digit" id="msTens">-</div>
     </div>
+    <div class="buttonCont"></div>
   </body>
 </html>
